enhanced bug report form

--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
             </p>
             <p id="intro_text">The adjoining map shows people who are using or contributing to Dataverse.</p>
             <button id="download_btn"
-                onclick="showModal('Dataverse is currently under development. It will be available for installastion soon.\n\nHowever, you can visit the following link to run the project locally on your computer:', 'download dataverse')">Get
+                onclick="showModal('Dataverse is currently under development. It will be available for installastion soon.\n\nHowever, you can fork the GitHub repo and run Dataverse on your computer:', 'download dataverse')">Get
                 Dataverse</button>
 
             <div id="modal" class="modal">
@@ -240,7 +240,7 @@
             <p style="color:white">Let Me Know Your Thoughts!</p>
             <input type="text" name="Name" placeholder="Your Name" required>
             <input type="email" name="Email" placeholder="Your Email ID" required>
-            <textarea name="Message" placeholder="Your Message" rows="4" required
+            <textarea name="Message" placeholder="Your thoughts on Dataverse" rows="4" required
                 oninput="checkFeedbackLength(this)"></textarea>
             <p id="feedbackError"
                 style="color:#fd4346; opacity: 0%; font-size: 15px; white-space: normal; transition: opacity 0.4s ease ">
