--- a/index.html
+++ b/index.html
@@ -293,7 +293,7 @@
     </footer>
     <div class="links" id="linksTejas">
         <div class="end_line"></div>
-        <p class="tejas_credits" style="color:rgb(177, 177, 177);">&copy; <span id="copyright">32949832</span>
+        <p class="tejas_credits" style="color:rgb(177, 177, 177);">&copy; 2023-<span id="copyright">32949832</span>
             Dataverse.&nbsp;All rights Reserved.</p>
         <p style="color:rgb(187, 187, 187);"> Designed & Developed by <a href="404.html">Tejas
                 Gupta</a></p>
