fixed reveal animation

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.7.1/dist/leaflet.css" />
     <link rel="shortcut icon" href="website/web_images/3dlogo.svg" type="image/x-icon">
     <link rel="stylesheet" href="website/styles/style.css">
+    <script src="https://unpkg.com/scrollreveal"></script>
     <link href="https://fonts.googleapis.com/css2?family=Inconsolata:wght@200..900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -121,8 +122,8 @@
             <div class="scroll_animation"></div>
         </div>
     </div>
-    <div class="section big_container" style=" margin-top: 100px;"></div>
-    <div class="section" id="about">
+    <div class="section reveal big_container" style=" margin-top: 100px;"></div>
+    <div class="section reveal" id="about">
         <div class="about_left">
             <p class="heading">So, What does this Software do?</p>
             <p class="subheading">Visualise Data!</p>
@@ -139,7 +140,7 @@
             <img src="website/web_images/about_down.webp" class="preview down">
         </div>
     </div>
-    <div class="section" id="finance">
+    <div class="section reveal" id="finance">
         <div class="finance_left">
             <img src="website/web_images/finance_up.webp" class="preview up">
             <img src="website/web_images/finance_down.webp" class="preview down">
@@ -152,7 +153,7 @@
         </div>
     </div>
 
-    <div class="section" id="charts">
+    <div class="section reveal" id="charts">
         <p class="heading">Here are some examples of what you can do with Dataverse</p>
         <div class="examples" id="examples">
 
@@ -197,7 +198,7 @@
     </div>
 
 
-    <div class="section" id="develop">
+    <div class="section reveal" id="develop">
         <div class="develop_left">
             <p class="heading">Want to contribute to this Project?</p>
             <div class="subheading" id="technologies">
