added more tabs

--- a/documentation.html
+++ b/documentation.html
@@ -105,16 +105,25 @@
                 <td id="current"><a href="documentation.html" class="table_link">Documentation</a></td>
             </tr>
             <tr>
+                <td><a href="404.html" class="table_link">Versions</a></td>
+            </tr>
+            <tr>
+                <td><a href="./website/pages/support.html" class="table_link">Support</a></td>
+            </tr>
+            <tr>
+                <td><a href="./website/pages/contributor.html" class="table_link">Contributors</a></td>
+            </tr>
+            <tr>
+                <td><a href="./website/pages/reviews.html" class="table_link">Reviews</a></td>
+            </tr>
+            <tr>
+                <td><a href="./website/pages/license.html" class="table_link">License</a></td>
+            </tr>
+            <tr>
+                <td><a href="404.html" class="table_link">Stunning Visuals</a></td>
+            </tr>
+            <tr>
                 <td><a href="https://github.com/multiverseweb/Dataverse" class="table_link">Github Repository</a></td>
-            </tr>
-            <tr>
-                <td><a href="website/pages/support.html" class="table_link">Support</a></td>
-            </tr>
-            <tr>
-                <td><a href="website/pages/license.html" class="table_link">License</a></td>
-            </tr>
-            <tr>
-                <td><a href="website/pages/contributor.html" class="table_link">Contributors</a></td>
             </tr>
         </table>
     </div>
