--- a/website/pages/license.html
+++ b/website/pages/license.html
@@ -55,16 +55,25 @@
                 <td><a href="../../documentation.html" class="table_link">Documentation</a></td>
             </tr>
             <tr>
-                <td><a href="https://github.com/multiverseweb/Dataverse" class="table_link">Github Repository</a></td>
+                <td><a href="../../404.html" class="table_link">Versions</a></td>
             </tr>
             <tr>
-                <td><a href="../pages/support.html" class="table_link">Support</a></td>
+                <td><a href="support.html" class="table_link">Support</a></td>
+            </tr>
+            <tr>
+                <td><a href="contributor.html" class="table_link">Contributors</a></td>
+            </tr>
+            <tr>
+                <td><a href="reviews.html" class="table_link">Reviews</a></td>
             </tr>
             <tr>
                 <td id="current"><a href="license.html" class="table_link">License</a></td>
             </tr>
             <tr>
-                <td><a href="contributor.html" class="table_link">Contributors</a></td>
+                <td><a href="../../404.html" class="table_link">Stunning Visuals</a></td>
+            </tr>
+            <tr>
+                <td><a href="https://github.com/multiverseweb/Dataverse" class="table_link">Github Repository</a></td>
             </tr>
         </table>
     </div>
