--- a/website/pages/support.html
+++ b/website/pages/support.html
@@ -70,17 +70,25 @@
                         <td><a href="../../documentation.html" class="table_link">Documentation</a></td>
                     </tr>
                     <tr>
-                        <td><a href="https://github.com/multiverseweb/Dataverse" class="table_link">Github
-                                Repository</a></td>
+                        <td><a href="../../404.html" class="table_link">Versions</a></td>
                     </tr>
                     <tr>
                         <td id="current"><a href="support.html" class="table_link">Support</a></td>
                     </tr>
                     <tr>
-                        <td><a href="../pages/license.html" class="table_link">License</a></td>
+                        <td><a href="contributor.html" class="table_link">Contributors</a></td>
                     </tr>
                     <tr>
-                        <td><a href="../pages/contributor.html" class="table_link">Contributors</a></td>
+                        <td><a href="reviews.html" class="table_link">Reviews</a></td>
+                    </tr>
+                    <tr>
+                        <td><a href="license.html" class="table_link">License</a></td>
+                    </tr>
+                    <tr>
+                        <td><a href="../../404.html" class="table_link">Stunning Visuals</a></td>
+                    </tr>
+                    <tr>
+                        <td><a href="https://github.com/multiverseweb/Dataverse" class="table_link">Github Repository</a></td>
                     </tr>
                 </table>
             </div>
@@ -197,7 +205,7 @@
         <div class="button-div"><button type="submit">Send</button></div>
     </form>
     <script src="../scripts/script.js" type="module" defer></script>
-    <script src="../scripts/support.js" type="module" defer></script>
+    <script src="../scripts/support.js" defer></script>
 </body>
 
 </html>
