develop theme toggle

--- a/index.html
+++ b/index.html
@@ -240,8 +240,8 @@
                 </button></a>
         </div>
         <div class="develop_right reveal">
-            <img src="website/web_images/develop_up.webp" class="preview up">
-            <img src="website/web_images/develop_down.webp" class="preview down">
+            <img src="website/web_images/develop_up.webp" class="preview up develop_theme">
+            <img src="website/web_images/develop_down.webp" class="preview down develop_theme">
         </div>
     </div>
     <footer id="footer">
