--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
             <p class="text reveal">Easily transform raw data into visually appealing charts such as bar graphs, pie charts,
                 and
                 line graphs. It also supports advanced data visualisation techniques like heatmaps, Radar charts, 3D
-                Surface Plots, etc.
+                Surface Plots, etc..
                 <br><br>
                 You can also download the generated plots or save the data for later use.
             </p>
@@ -155,7 +155,7 @@
         <div class="finance_right">
             <p class="subheading reveal">Track Finances!</p>
             <p class="text reveal">Manage your finances by providing data such as income, expense, investment, etc. and get
-                useful results such as visualization of data, extrapolated data, max expenditure, etc. Also, the
+                useful results such as visualization of data, extrapolated data, max expenditure, etc.. Also, the
                 software automatically stores data with a timestamp.</p>
         </div>
     </div>
