--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                 <td><a href="documentation.html" class="table_link">Documentation</a></td>
             </tr>
             <tr>
-                <td><a href="404.html" class="table_link">Versions</a></td>
+                <td><a href="./website/pages/versions.html" class="table_link">Versions</a></td>
             </tr>
             <tr>
                 <td><a href="./website/pages/support.html" class="table_link">Support</a></td>
@@ -279,7 +279,7 @@
             <div class="small">
                 <div class="link_class">
                     <p class="link-category">Software Details</p>
-                    <a href="404.html" class="table_link">Versions</a>
+                    <a href="website/pages/versions.html" class="table_link">Versions</a>
                     <a href="website/pages/license.html" class="table_link">License</a>
                     <a href="documentation.html" class="table_link">Documentation</a>
                     <a href="https://github.com/multiverseweb/Dataverse" class="table_link">GitHub Repository</a>
