--- a/documentation.html
+++ b/documentation.html
@@ -105,7 +105,7 @@
                 <td id="current"><a href="documentation.html" class="table_link">Documentation</a></td>
             </tr>
             <tr>
-                <td><a href="404.html" class="table_link">Versions</a></td>
+                <td><a href="./website/pages/versions.html" class="table_link">Versions</a></td>
             </tr>
             <tr>
                 <td><a href="./website/pages/support.html" class="table_link">Support</a></td>
