--- a/website/pages/versions.html
+++ b/website/pages/versions.html
@@ -50,28 +50,28 @@
     <div class="plane" id="plane">
         <table>
             <tr>
-                <td id="current"><a href="index.html" class="table_link">Home</a></td>
+                <td><a href="../../index.html" class="table_link">Home</a></td>
             </tr>
             <tr>
-                <td><a href="documentation.html" class="table_link">Documentation</a></td>
+                <td><a href="../../documentation.html" class="table_link">Documentation</a></td>
             </tr>
             <tr>
-                <td><a href="versions.html" class="table_link">Versions</a></td>
+                <td id="current"><a href="versions.html" class="table_link">Versions</a></td>
             </tr>
             <tr>
-                <td><a href="./../pages/support.html" class="table_link">Support</a></td>
+                <td><a href="support.html" class="table_link">Support</a></td>
             </tr>
             <tr>
-                <td><a href="./../pages/contributor.html" class="table_link">Contributors</a></td>
+                <td><a href="contributor.html" class="table_link">Contributors</a></td>
             </tr>
             <tr>
-                <td><a href="./../pages/reviews.html" class="table_link">Reviews</a></td>
+                <td><a href="reviews.html" class="table_link">Reviews</a></td>
             </tr>
             <tr>
-                <td><a href="./../pages/license.html" class="table_link">License</a></td>
+                <td><a href="license.html" class="table_link">License</a></td>
             </tr>
             <tr>
-                <td><a href="404.html" class="table_link">Stunning Visuals</a></td>
+                <td><a href="../../404.html" class="table_link">Stunning Visuals</a></td>
             </tr>
             <tr>
                 <td><a href="https://github.com/multiverseweb/Dataverse" class="table_link">Github Repository</a></td>
