--- a/website/pages/support.html
+++ b/website/pages/support.html
@@ -70,7 +70,7 @@
                         <td><a href="../../documentation.html" class="table_link">Documentation</a></td>
                     </tr>
                     <tr>
-                        <td><a href="../../404.html" class="table_link">Versions</a></td>
+                        <td><a href="versions.html" class="table_link">Versions</a></td>
                     </tr>
                     <tr>
                         <td id="current"><a href="support.html" class="table_link">Support</a></td>
