support js not working

--- a/website/pages/support.html
+++ b/website/pages/support.html
@@ -88,7 +88,8 @@
                         <td><a href="../../404.html" class="table_link">Stunning Visuals</a></td>
                     </tr>
                     <tr>
-                        <td><a href="https://github.com/multiverseweb/Dataverse" class="table_link">Github Repository</a></td>
+                        <td><a href="https://github.com/multiverseweb/Dataverse" class="table_link">Github
+                                Repository</a></td>
                     </tr>
                 </table>
             </div>
@@ -166,9 +167,12 @@
                                 class="design_btn"><img src="../web_images/github.png"
                                     alt="">Contribute</button></a><br>
                     </div>
-                    <div><p class="fundInfo">- Sponsor Us: If you sponsor me, I'll be able to do more of what I'm already doing, better, and for you, the community, all while remaining open-source!</p>
+                    <div>
+                        <p class="fundInfo">- Sponsor Us: If you sponsor me, I'll be able to do more of what I'm already
+                            doing, better, and for you, the community, all while remaining open-source!</p>
                         <a href="https://github.com/sponsors/multiverseweb" class="funds"><button
-                                class="design_btn"><img src="../web_images/sponsor.png" alt="">GitHub Sponsors</button></a><br>
+                                class="design_btn"><img src="../web_images/sponsor.png" alt="">GitHub
+                                Sponsors</button></a><br>
                     </div>
                 </div>
             </div>
@@ -192,8 +196,7 @@
             </select>
         </label>
         <label for="issue-title-field">
-            <input type="text" id="issue-title-field" required name="issue-title"
-                placeholder="Issue Title">
+            <input type="text" id="issue-title-field" required name="issue-title" placeholder="Issue Title">
         </label>
         <label for="email">
             <input type="email" id="email" name="email" placeholder="Your Email ID" required>
@@ -205,7 +208,7 @@
         <div class="button-div"><button type="submit">Send</button></div>
     </form>
     <script src="../scripts/script.js" type="module" defer></script>
-    <script src="../scripts/support.js" defer></script>
+    <script src="../scripts/support.js"></script>
 </body>
 
 </html>
