fixed minor issues

--- a/website/pages/contributor.html
+++ b/website/pages/contributor.html
@@ -29,6 +29,7 @@
         <div class="line" id="l2"></div>
         <div class="line" id="l3"></div>
     </div>
+    <div class="scrollBar" id="progress_bar"></div>
     <div class="plane" id="plane">
         <table>
             <tr>
