--- a/website/pages/support.html
+++ b/website/pages/support.html
@@ -209,6 +209,7 @@
     </form>
     <script src="../scripts/script.js" type="module" defer></script>
     <script src="../scripts/support.js"></script>
+    <a href="../../index.html"><button class="goBack">Go To Home</button></a>
 </body>
 
 </html>
