--- a/website/pages/versions.html
+++ b/website/pages/versions.html
@@ -7,6 +7,18 @@
     <link rel="shortcut icon" href="../web_images/3dlogo.svg" type="image/x-icon">
     <link rel="stylesheet" href="../styles/style.css">
     <title>Dataverse | Versions</title>
+    <style>
+    .center-text {
+      display: flex;
+      justify-content: center; /* Centers horizontally */
+      align-items: center;     /* Centers vertically */
+      height: 160px;           /* Set a specific height for the container */
+    }
+    h2 {
+      padding-top: 50px;  /* Adjust top padding */
+      padding-bottom: 0px;  /* Adjust bottom padding */
+    }
+  </style>
 </head>
 
 <body>
@@ -78,10 +90,8 @@
             </tr>
         </table>
     </div>
+    <div class="center-text"><h2>Dataverse VERSIONS</h2></div>
     <table id="versions">
-        <th>
-            Versions
-        </th>
         <tr>
             <td>v.XM45'24</td>
         </tr>
