--- a/website/pages/versions.html
+++ b/website/pages/versions.html
@@ -104,6 +104,7 @@
     </table>
 
     <script src="../scripts/script.js" type="module"></script>
+    <a href="../../index.html"><button class="goBack">Go To Home</button></a>
 </body>
 
 </html>
