--- a/website/pages/versions.html
+++ b/website/pages/versions.html
@@ -92,17 +92,27 @@
     </div>
     <div class="center-text"><h2>Dataverse VERSIONS</h2></div>
     <table id="versions">
-        <tr>
-            <td>v.XM45'24</td>
-        </tr>
-        <tr>
-            <td>v.6550(24)</td>
-        </tr>
-        <tr>
-            <td>v.06.02.24</td>
-        </tr>
+        <thead>
+            <tr>
+                <th>Version</th>
+                <th>Description</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr>
+                <td>v.XM45.24 <span class="status highlight">Under Development</span></td>
+                <td class="description">High scale installable version currently being developed. It has an improved UI based on glassmorphism, making the project mobile-friendly and providing more analytical features. This version seeks major contributions through SWOC-S5.</td>
+            </tr>
+            <tr>
+                <td>v.6550.24 <span class="status highlight">Latest</span></td>
+                <td class="description">Current stable version that supports most of the data visualization techniques and finance tracking. Major development done during GSSoC'24.</td>
+            </tr>
+            <tr>
+                <td>v.06.02.24</td>
+                <td class="description">Initial version developed on 6th February, 2024. Only supports finance tracking.</td>
+            </tr>
+        </tbody>
     </table>
-
     <script src="../scripts/script.js" type="module"></script>
     <a href="../../index.html"><button class="goBack">Go To Home</button></a>
 </body>
