Fixed the stunning visuals page which wasn't complete  earlier  and added dark mode

--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
                 <td><a href="./website/pages/license.html" class="table_link">License</a></td>
             </tr>
             <tr>
-                <td><a href="404.html" class="table_link">Stunning Visuals</a></td>
+                <td><a href="stunningvisuals.html" class="table_link">Stunning Visuals</a></td>
             </tr>
             <tr>
                 <td><a href="https://github.com/multiverseweb/Dataverse" class="table_link">Github Repository</a></td>
