--- a/website/pages/contributor.html
+++ b/website/pages/contributor.html
@@ -14,12 +14,27 @@
     <nav id="navbar">
         <img src="../web_images/3dlogo.svg" alt="Dataverse Logo" class="logo" id="normal">
         <img src="../web_images/3d_glow.webp" alt="Dataverse Logo" class="logo" id="glow">
-        <a href="../pages/login.html">
-            <button class="navbarButton">
-                <span class="button-text">Login</span>
-                <img src="../web_images/user.png" alt="User Icon" class="user-icon">
-            </button>
-        </a>
+       <a href="../pages/login.html">
+  <button 
+    style="
+      display:flex;
+      align-items:center;
+      gap:6px;
+      padding:8px 14px;
+      background:#4a90e2;
+      color:#fff;
+      font-size:14px;
+      font-weight:600;
+      border:none;
+      border-radius:20px;
+      cursor:pointer;
+    ">
+    <span>Login</span>
+    <img src="../web_images/user.png" alt="User Icon" style="width:18px;height:18px;">
+  </button>
+</a>
+
+   
     </nav>
 
     <button class="burger" id="burger" onclick="show()"></button>
